@@ -54,8 +54,6 @@ public:
 
 	bool UseAdvShading() const { return advShading; }
 	bool WireFrameMode() const { return wireframe; }
-
-	bool& UseAdvShadingRef() { return advShading; }
 	bool& WireFrameModeRef() { return wireframe; }
 
 	CBaseGroundTextures* GetGroundTextures() { return groundTextures; }
