@@ -19,6 +19,7 @@ Misc:
  - detect hangs during filesystem initialisation
  - fix stale thread-id cache in watchdog after reload
  - make LuaVFSDownload rescan archives in main thread, and do so when a download finishes (not when one starts)
+ - remove /adv{map,model}shading commands
 
 
 
